--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.1",
     "node-cron": "^4.2.1",
     "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.66.0",
